Wed May 16 20:12:00 2007  Lee Noar  <leenoar@sky.com>

	* include/sys/elf.h: Standard header file defining structures and
	values used in the ELF file format.
	* Makefile.am: Add above file to list of those to install.

Tue Apr 10 19:19:05 2007  Lee Noar  <leenoar@ntlworld.com>

	* gcc-compat/gcc_alloca.c: New file defining __gcc_alloca as a
	dummy function that calls abort().
	* gcc-compat/b_return.c: New file defining __builtin_return_address
	as a dummy function that calls abort().
	* Makefile.am: Add above files to build.

	The above functions are required to prevent configure tests failing
	with undefined symbol linker errors. The problem is that libgcc refers
	to these symbols somewhere in its code. Normally, with a static library,
	this isn't a problem as the objects within the library that reference
	these symbols are not pulled in by the linker. However, with a libgcc
	DSO, the linker has to look at the library as a single entity, and is
	forced to resolve these symbols even if the executable never uses them.

Sat Mar 24 16:58:41 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: test on __TARGET_MODULE__ in order to exclude non
	relevant code and relocation directives.  Renamed c_next to ___init.

Mon Mar 12 00:04:06 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: workaround for a problem in prerelease Select 4
	26-bit SCL as this needs the processor mode in the return value on
	the stack before calling _kernel_moduleinit.

Tue Mar 06 00:33:25 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: significant number of changes resulting in a proper
	ELF stub for SCL based modules.
	* include/stdio.h: __LIB_VERSION is now 500 as we're targeting SCL 5.

Sun Jan 21 21:28:01 CET 2007  John Tytgat  <John.Tytgat@aaug.net>

	* riscos/stubs.s: enabled the _Lib$Reloc$Off$DP definition for module
	use (needed by CMunge assembler code).

Thu Jan 18 02:02:30 CET 2007  John Tytgat  <John.Tytgat@aaug.net>
